--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,10 +2,12 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView android:layout_width="match_parent"
+    <TextView android:id="@+id/tv"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
