--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,4 +16,23 @@
               android:gravity="center"
               android:text="SDIFSNOFIWEF oDSIFNSsii" />
 
+    <TextView android:id="@+id/label"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              app:layout_constraintLeft_toLeftOf="parent"
+              app:layout_constraintRight_toRightOf="parent"
+              app:layout_constraintHorizontal_bias="0.3"
+              app:layout_constraintTop_toBottomOf="@id/tv"
+              android:gravity="center"
+              android:text="ABCDEFG"/>
+
+    <Button android:id="@+id/btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toRightOf="@id/label"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/label"
+            android:gravity="center"
+            android:text="replace"/>
+
 </android.support.constraint.ConstraintLayout>
